# cpp-design-patterns

./: .gitignore  CMakeLists.txt  DesignPatterns.cpp  DesignPatterns.h  README.md  main.cpp
behavioral/chain_of_responsability/: Base.cpp  Handler1.cpp  Handler2.cpp  Handler3.cpp
behavioral/command/: Command.h  FlipDownCommand.cpp  FlipUpCommand.cpp  Light.cpp  Switch.cpp
behavioral/interpreter/: Hundred.cpp  RNInterpreter.cpp  RNInterpreter.h  Thousand.cpp
behavioral/observer/: DivObserver.cpp  ModObserver.cpp  Observer.cpp  Observer.h  Subject.cpp  Subject.h
behavioral/state/: TLGreen.cpp  TLGreen.h  TLNetTraffic.cpp  TLNetTraffic.h  TLRed.cpp  TLRed.h  TLState.h  TLYellow.cpp  TLYellow.h
behavioral/strategy/: ConcreteStrategyA.cpp  ConcreteStrategyB.cpp  Context.cpp  StrategyInterface.h
behavioral/template/: One.cpp  TemplateBase.cpp  Two.cpp
creational/builder/: Cook.cpp  Cook.h  HawaiianPizzaBuilder.cpp  HawaiianPizzaBuilder.h  Pizza.cpp  Pizza.h  PizzaBuilder.cpp  PizzaBuilder.h  SpicyPizzaBuilder.cpp  SpicyPizzaBuilder.h
creational/factory/: Computer.h  ComputerFactory.cpp  ComputerFactory.h  Desktop.cpp  Desktop.h  Laptop.cpp  Laptop.h
creational/prototype/: BikeRecord.cpp  BikeRecord.h  CarRecord.cpp  CarRecord.h  Record.h  RecordFactory.cpp  RecordFactory.h
creational/singleton/: StringSingleton.cpp  StringSingleton.h
structural/adapter/: Hindu.cpp  HinduFemale.cpp  Muslim.cpp  MuslimAdapter.cpp  MuslimFemale.cpp  MuslimRitual.cpp
structural/bridge/: CircleShape.cpp  DrawingAPI.h  DrawingAPI1.cpp  DrawingAPI2.cpp  Shape.h
(+28 files in other folders)
